<?xml version="1.0" encoding="utf-8"?>
<tools:menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/nav_profile" />
        <item android:id="@+id/nav_take_photo"
            android:icon="@drawable/ic_take_photo"
            android:title="@string/nav_take_photo" />

        <item android:id="@+id/nav_take_quiz"
            android:icon="@drawable/ic_take_quiz"
            android:title="@string/nav_take_quiz" />

        <item android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/nav_search" />

        <item android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_favorites"
            android:title="@string/nav_favorite" />


    </group>
</tools:menu>