<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context="com.example.guidrian.ProfileFragment"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="9dp">


    <TextView
        android:id="@+id/ProfileName"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="195dp"
        android:layout_marginTop="175dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/profileName"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ProfilePhone"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="195dp"
        android:layout_marginTop="277dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/profilePhone"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ProfileEmail"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="195dp"
        android:layout_marginTop="226dp"
        android:hint="@string/profileEmail"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Logout"
        android:layout_width="151dp"
        android:layout_height="49dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="480dp"
        android:hint="@string/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="133dp"
        android:layout_height="141dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="172dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Profile"
        android:layout_width="158dp"
        android:layout_height="42dp"
        android:layout_marginTop="56dp"
        android:hint="@string/profile"
        android:textAlignment="center"

        android:textColor="@android:color/holo_blue_dark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>