<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context="com.example.guidrian.Register">

    <EditText
        android:id="@+id/Phone"
        android:layout_width="353dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="42dp"
        android:hint="@string/phone"
        android:inputType="phone"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        app:layout_constraintBottom_toTopOf="@+id/RegisterButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="353dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="24dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        app:layout_constraintBottom_toTopOf="@+id/Phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="353dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="24dp"
        android:hint="@string/enteremail"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        app:layout_constraintBottom_toTopOf="@+id/Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Name" />

    <TextView
        android:id="@+id/apptitle"
        android:layout_width="252dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="54dp"
        android:layout_marginBottom="22dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/guidria"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="217dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:fontFamily="monospace"
        android:text="@string/new_acc"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        app:layout_constraintBottom_toTopOf="@+id/Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apptitle" />

    <EditText
        android:id="@+id/Name"
        android:layout_width="353dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="18dp"
        android:hint="@string/fullname"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        app:layout_constraintBottom_toTopOf="@+id/Email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/RegisterButton"
        android:layout_width="109dp"
        android:layout_height="50dp"
        android:layout_marginBottom="17dp"
        android:text="@string/register"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintBottom_toTopOf="@+id/GoToLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Phone" />

    <TextView
        android:id="@+id/GoToLogin"
        android:layout_width="218dp"
        android:layout_height="40dp"
        android:layout_marginBottom="21dp"
        android:text="@string/already"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegisterButton" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="94dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GoToLogin" />
</androidx.constraintlayout.widget.ConstraintLayout>