<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context="com.example.guidrian.Register">

    <EditText
        android:id="@+id/Password"
        android:layout_width="353dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="330dp"
        android:layout_marginBottom="46dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        app:layout_constraintBottom_toTopOf="@+id/LoginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="353dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="277dp"
        android:layout_marginBottom="414dp"
        android:hint="@string/enteremail"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="245dp"
        android:layout_height="49dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="11dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/guidria"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="210dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="106dp"
        android:fontFamily="monospace"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="22dp"
        app:layout_constraintBottom_toTopOf="@+id/Email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="109dp"
        android:layout_height="50dp"
        android:layout_marginBottom="239dp"
        android:text="@string/login"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="537dp"
        android:layout_marginBottom="145dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.995" />

</androidx.constraintlayout.widget.ConstraintLayout>